style.css
/* ... */
.nav-icon svg{
  height:2rem;
  width: 3rem;
  position: absolute;
  transform-style: preserve-3d;
  perspective: 100rem;
  backface-visibility: hidden;
  transition: 1s ease;
  cursor: pointer;
}
.nav-icon svg:nth-child(2) {
  transform: rotateY(180deg);
}
.nav-icon:hover svg:nth-child(2){
  transform: rotateY(0deg);
}
.nav-icon:hover svg:nth-child(1){
  transform: rotateY(-180deg);
}


/* nav & header ends , board starts*/




.cell:first-child,
.cell:nth-child(2),
.cell:nth-child(3) {
  border-top: none;
}

.cell:nth-child(3n + 1) {
  border-left: none;
}

.cell:nth-child(3n + 3) {
  border-right: none;
}

.cell:last-child,
.cell:nth-child(8),
.cell:nth-child(7) {
  border-bottom: none;
}

.cell.x,
.cell.circle {
  cursor: not-allowed;
}


.winning-message {
  display: none;
  position: fixed;
  font-family: Poppins;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, .9);
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 5rem;
  flex-direction: column;
}

.winning-message button {
  font-size: 3rem;
  background-color: white;
  border: 1px solid black;
  padding: .25em .5em;
  cursor: pointer;
}

.winning-message button:hover {
  background-color: black;
  color: white;
  border-color: white;
}

.winning-message.show {
  display: flex;
}
#restartButton{
border-radius: 2rem;
font-family: Poppins;
font-size: medium;
padding: 2rem;
}
#quitButton{
border-radius: 2rem;
font-family: Poppins;
font-size: medium;
padding-top: 2rem;
padding-bottom: 2rem;
padding-left: 2.7rem;
padding-right: 2.7rem;
}
#quitButton:hover, #restartButton:hover{
padding:3rem;
transition: 500ms;
}

.cell {
  color: transparent;
}

  /* Left screen options styling */

  .lso {
    color: white
  }


  /* End of Left screen options styling */

  /* styling the modes */
  

  .radio-ip:checked + .radio-lb{
    background: #ffffff;
    color: #273155;
  }
  .radio-ip:checked + .radio-lb svg{
    fill:#273155;
  }

  .hidden{
    display: none;
  }

  .page-layout {
    width: 80%;
    height: 80%;
    margin: auto;
    top: 8rem;
    position: relative;
    z-index: 0;
  }
/* ... */

